--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
   <main id="scroll-wrapper">
     <div id="intro" class="scroll-section">
       <h1 id="hello-world" class="big-text"></h1>
+      <div id="dev-details" class="box-shadow">
+        <h3>Ben Davidson</h3>
+        <p class="subtitle">Junior Full-Stack Developer</p>
+        <p>Graduate Computer Science Major with a Minor in Interface Design.</p>
+        <p>Class of 2025, University of Waikato, NZ</p>
+      </div>
     </div>
 
     <div id="project-section" class="scroll-section">
       <h2 id="projects-title" class="">Projects I've worked on &#8595;</h2>
       <div class="projects">
-        <div class="project">
+        <div class="project box-shadow">
           <img>
         </div>
-        <div class="project">
+        <div class="project box-shadow">
           <img>
         </div>
       </div>
@@ -42,12 +48,9 @@
     </div>
   </main>
   <nav id="nav-bottom">
-    <div id="name">Ben Davidson</div>
-    <div id="right-float-nav">
       <a href="#intro">Home</a>
       <a href="#projectSection">Projects</a>
       <a href="">Contact</a>
-    </div>
   </nav>
   <script src="index.js"></script>
 </body>
