Fixed responsivity and link issues: - Fixed large text sizing - Fixed projects page link - Fixed large title sizing - Adjusted border radius on bio

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </main>
   <nav id="nav-bottom">
       <a href="#intro">Home</a>
-      <a href="#projectSection">Projects</a>
+      <a href="#project-section">Projects</a>
       <a href="">Contact</a>
   </nav>
   <script src="index.js"></script>
