Smoothed out intro page: - Removed dev details position reliance on hello world due to jolty movement when using type effect - Added in fade and slide effect on dev details

--- a/index.html
+++ b/index.html
@@ -29,11 +29,20 @@
     <div id="project-section" class="scroll-section">
       <h2 id="projects-title" class="">Projects I've worked on &#8595;</h2>
       <div class="projects">
-        <div class="project box-shadow">
-          <img>
+
+        <div class="project-container">
+          <div class="project-line"></div>
+          <div class="project box-shadow">
+
+            <img>
+          </div>
         </div>
-        <div class="project box-shadow">
-          <img>
+        <div class="project-container">
+          <div class="project-line"></div>
+          <div class="project box-shadow">
+
+            <img>
+          </div>
         </div>
       </div>
       <div id="tech-marquee">
@@ -48,9 +57,9 @@
     </div>
   </main>
   <nav id="nav-bottom">
-      <a href="#intro">Home</a>
-      <a href="#project-section">Projects</a>
-      <a href="">Contact</a>
+    <a href="#intro">Home</a>
+    <a href="#project-section">Projects</a>
+    <a href="">Contact</a>
   </nav>
   <script src="index.js"></script>
 </body>
