Small visual update: - Moved dev details to permanently below large intro page text - Revamped text to be on right side when screen height is too small - Added animation to home page on lava fall

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
   <main id="scroll-wrapper">
     <div id="intro" class="scroll-section">
+      <div id="saturation-layer"></div>
       <h1 id="hello-world" class="big-text"></h1>
       <div id="dev-details" class="box-shadow">
         <h3>Ben Davidson</h3>
@@ -27,7 +28,7 @@
     </div>
 
     <div id="project-section" class="scroll-section">
-      <h2 id="projects-title" class="">Projects I've worked on &#8595;</h2>
+      <h1 id="projects-title" class="">Projects I've worked on &#8595;</h1>
       <div class="projects">
 
         <div class="project-container">
