Projects Update: - Added social media post page to projects - Ensured preview images fill project card

--- a/index.html
+++ b/index.html
@@ -53,31 +53,23 @@
             </div>
           </div>
 
-          <!--<div class="project box-shadow">
+          <div class="project box-shadow">
             <img class="info-icon" src="images/icons/info.svg">
-            <img>
+            <picture>
+              <!-- Image for screens smaller than 768px -->
+              <source srcset="images/projects/social-media-post-mobile.png" media="(max-width: 767px)">
+              <!-- Default image (desktop) -->
+              <img src="images/projects/social-media-post.png" alt="Preview Image">
+            </picture>
             <div class="project-details">
+              <h2>Social Media Post Website</h2>
+              <p>I developed this website myself to display my workflow and final concepts for themed social media posts that would be posted on the University of Waikato Design social media platforms</p>
+              <div class="project-links">
+                <a href="http://github.com/Bendavidsonz/social-media-post" target="_blank" rel="noopener noreferrer"><img src="images/icons/github.svg"></a>
+                <a href="https://bendavidsonz.github.io/social-media-post/" target="_blank" rel="noopener noreferrer"><img src="images/icons/external-link.svg"></a>
+              </div>
             </div>
           </div>
-
-          <div class="project box-shadow">
-            <img class="info-icon" src="images/icons/info.svg">
-            <img>
-            <div class="project-details"></div>
-          </div>
-
-          <div class="project box-shadow">
-            <img class="info-icon" src="images/icons/info.svg">
-            <img>
-            <div class="project-details"></div>
-          </div>
-
-          <div class="project box-shadow">
-            <img class="info-icon" src="images/icons/info.svg">
-            <img>
-            <div class="project-details"></div>
-          </div>
-        </div>-->
       </div>
       <div id="tech-marquee">
         <img class="tech1" src="images/icons/java.svg">
