--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
               </div>
             </div>
           </div>
+
+          <div class="project box-shadow">
+            <img class="info-icon" src="images/icons/info.svg">
+            <picture>
+              <!-- Image for screens smaller than 768px -->
+              <source srcset="images/projects/atomic-design-mobile.png" media="(max-width: 767px)">
+              <!-- Default image (desktop) -->
+              <img src="images/projects/atomic-design.png" alt="Preview Image">
+            </picture>
+            <div class="project-details">
+              <h2>Atomic Design Website</h2>
+              <p>I developed this website myself to display my workflow and use of design systems, particularly Brad Frost's "Atomic Design".</p>
+              <div class="project-links">
+                <a href="https://github.com/Bendavidsonz/atomic-design" target="_blank" rel="noopener noreferrer"><img src="images/icons/github.svg"></a>
+                <a href="https://bendavidsonz.github.io/atomic-design/" target="_blank" rel="noopener noreferrer"><img src="images/icons/external-link.svg"></a>
+              </div>
+            </div>
+          </div>
       </div>
       <div id="tech-marquee">
         <img class="tech1" src="images/icons/java.svg">
